build basic onboarding flow
